--- a/HTML e CSS/Página Pessoal/CSS/cssIndex.css
+++ b/HTML e CSS/Página Pessoal/CSS/cssIndex.css
@@ -1,13 +1,21 @@
 .artigo {
+    align-content: center;
+    flex-direction: column;
+    display: flex;
     padding-left: 10px;
 }
 
 .emprego2 {
+    align-content: center;
+    flex-direction: column;
+    display: flex;
     padding-left: 10px;
     margin-top: 30px;
 }
 
 .foto_Douglas {
+   align-content: center; 
+   display: flex;
    width: 140px;
    border: 3px solid #ef4226;
    border-radius: 50%;
@@ -16,6 +24,9 @@
    display: flex;
 }
 .topo {
+    align-content: center;
+    flex-direction: column;
+    display: flex;
     background: rgb(59,70,81);
     border: 1px solid #ef4226;
     margin: 10px;
@@ -24,6 +35,9 @@
 }
 
 .secao {
+    align-content: center;
+    flex-direction: column;
+    display: flex;
     background: rgb(59, 70, 81);
     border: 1px solid #ef4226;
     margin: 10px;
@@ -32,26 +46,37 @@
 }
 
 body{
+    flex-direction: column;
+    display: flex;
     margin: 0;
     background: rgb(21, 22, 27);
     color: rgb(250, 250, 250);
     font-family: 'OpenSans',Arial,sans-serif;
-   
+    align-content: center;
 }
 
 .principal {
+    align-content: center;
+    flex-direction: column;
+    display: flex;
     margin: auto;
     max-width: 1100px;
 }
 .formulario {
+    align-content: center;
+    flex-direction: column;
+    display: flex;
     background-color: rgb(29, 30, 37);
     margin-top: 30px;
     border-top: 1px solid black;
     padding-bottom: 20px;
     
 }
-
 .end {
+    align-content: center;
+    text-align: left;
+    flex-direction: column;
+    display: flex;
     margin-left: 10px;
 }
 
