--- a/JavaScript/Modelo/assets/css/style.css
+++ b/JavaScript/Modelo/assets/css/style.css
@@ -8,21 +8,28 @@
   box-sizing: border-box;
   outline: 0;
 }
-
+.box{
+  display: flex;
+  justify-content: space-between;
+  margin-right: 50px;
+}
+p{
+  margin: 5px;
+}
 body {
   margin: 0;
   padding: 0;
   background: var(--primary-color);
   font-family: 'Open sans', sans-serif;
-  font-size: 1.3em;
+  font-size: 1.2em;
   line-height: 1.5em;
 }
 
 .container {
   max-width: 640px;
-  margin: 50px auto;
+  margin: 15px auto;
   background: #fff;
-  padding: 20px;
+  padding: 15px;
   border-radius: 10px;
 }
 
@@ -35,7 +42,7 @@ form input, form label, form button {
 form input {
   font-size: 24px;
   height: 50px;
-  padding: 0 20px;
+  padding: 0 15px;
 }
 
 form input:focus {
@@ -50,7 +57,7 @@ form button {
   font-weight: 700;
   height: 50px;
   cursor: pointer;
-  margin-top: 30px;
+  margin-top: 20px;
 }
 
 form button:hover {
